[project]
name = "strava-metrics"
version = "0.1.0"
description = "Strava metrics dashboard"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "polars>=1.0.0",
    "lxml>=4.9.0",
    "plotly>=5.0.0",
]

[project.scripts]
dashboard = "streamlit run app.py"